--- a/src/SmartRoadSense.Redux/AppShell.xaml
+++ b/src/SmartRoadSense.Redux/AppShell.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-       xmlns:local="clr-namespace:SmartRoadSense_Redux.Views"
+       xmlns:local="clr-namespace:SmartRoadSense.Redux.Views"
        RouteHost="it.smartroadsense"
        RouteScheme="app"
        Route="redux"
        FlyoutBehavior="Disabled"
        Title="SmartRoadSense"
-       x:Class="SmartRoadSense.Redux.AppShell">
+       x:Class="SmartRoadSense.Redux.AppShell"
+       >
 
     <!--
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -52,7 +53,7 @@
     -->
     <Shell.Resources>
         <ResourceDictionary>
-            <Color x:Key="NavigationPrimary">#2196F3</Color>
+            <Color x:Key="NavigationPrimary">#2A69FF</Color>
             <Style x:Key="BaseStyle" TargetType="Element">
                 <Setter Property="Shell.ShellBackgroundColor" Value="{StaticResource NavigationPrimary}" />
                 <Setter Property="Shell.ShellForegroundColor" Value="White" />
@@ -70,7 +71,7 @@
 
     <!-- Your Pages -->
     <ShellItem>
-        <ShellSection Title="Browse" Icon="tab_feed.png">
+        <ShellSection Title="Sensing" Icon="tab_feed.png">
             <ShellContent ContentTemplate="{DataTemplate local:ItemsPage}" />
         </ShellSection>
         <ShellSection Title="About" Icon="tab_about.png">
