--- a/src/SmartRoadSense.Redux/App.xaml
+++ b/src/SmartRoadSense.Redux/App.xaml
@@ -3,6 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SmartRoadSense.Redux.App">
     <Application.Resources>
-        
+        <ResourceDictionary>
+            <Color x:Key="NavigationPrimary">#2A69FF</Color>
+            <Color x:Key="LightTextColor">#999999</Color>
+            <Color x:Key="Accent">#FFBF29</Color>
+            
+            <Style TargetType="ShellItem" ApplyToDerivedTypes="True">
+                <Setter Property="Shell.BackgroundColor" Value="{StaticResource NavigationPrimary}" />
+                <Setter Property="Shell.ForegroundColor" Value="White" />
+                <Setter Property="Shell.TitleColor" Value="White" />
+                <Setter Property="Shell.DisabledColor" Value="#B4FFFFFF" />
+                <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
+                <Setter Property="Shell.TabBarForegroundColor" Value="White" />
+                <Setter Property="Shell.TabBarUnselectedColor" Value="#95FFFFFF" />
+                <Setter Property="Shell.TabBarTitleColor" Value="White" />
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
